adding quiz week 8

--- a/Week 8/Quiz/soal6.ipynb
+++ b/Week 8/Quiz/soal6.ipynb
@@ -320,6 +320,14 @@
     "# membuat scatterplot berdasarkan persebaran pelanggan per tanggalnya\n",
     "sns.scatterplot(x='Tanggal', y='Pelanggan', data=df)"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## code made by Tangbim"
+   ]
   }
  ],
  "metadata": {
